--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "^8.4.41",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.10",
+    "three": "^0.137.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -32,6 +33,7 @@
     "@angular/cli": "^16.2.14",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/three": "^0.150.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
