--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@types/youtube": "^0.0.50",
     "autoprefixer": "^10.4.20",
+    "ngx-countup": "^13.2.0",
     "postcss": "^8.4.41",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.10",
