--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@splidejs/splide": "^4.1.4",
     "@types/youtube": "^0.0.50",
     "autoprefixer": "^10.4.20",
     "ngx-countup": "^13.2.0",
