--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
@@ -22,6 +23,7 @@
     "@splidejs/splide": "^4.1.4",
     "@types/youtube": "^0.0.50",
     "autoprefixer": "^10.4.20",
+    "firebase": "^10.13.0",
     "ngx-countup": "^13.2.0",
     "postcss": "^8.4.41",
     "rxjs": "~7.8.0",
